fix: remove box-shadow on mobile

--- a/src/components/mortgage-calculator/mortgage-calculator.module.scss
+++ b/src/components/mortgage-calculator/mortgage-calculator.module.scss
@@ -17,5 +17,6 @@
 
   @media (width <= breakpoints.$mobile) {
     border-radius: 0;
+    box-shadow: none;
   }
 }
